Сделал первые правки
1)Блок sorting переименовал в header
2)page-selector переделал в footer
3)заменил каталог с ol на ul
4)исправил семантически неправильные теги b на h3, h4
5)Добавил недостающие классы к элементам
6)Выставил правильные размеры картинкам на слайдере

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header">
       <div class="container">
         <div class="page-header__wrapper">
-          <a>
+          <a href="#">
             <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
           </a>
           <div class="user-menu">
@@ -42,7 +42,7 @@
             <ol class="products-slider__list">
               <li class="products-slider__item products-slider__item--active">
                 <div class="products-slider__photos">
-                    <img class="products-slider__photo" src="img/slider/slider-1.png" alt="квадрокоптер">
+                    <img class="products-slider__photo" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
                     <button class="photos__pre-btn">назад</button>
                     <button class="photos__post-btn">вперед</button>
                 </div>
@@ -63,7 +63,7 @@
               </li>
               <li class="products-slider__item">
                 <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="img/slider/slider-2.png" alt="фитнес-браслет" width="384" height="486">
+                  <img class="products-slider__photo" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
                   <button class="photos__pre-btn">назад</button>
                   <button class="photos__post-btn">вперед</button>
               </div>
@@ -81,7 +81,7 @@
               </li>
               <li class="products-slider__item">
                 <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="img/slider/slider-3.png" alt="селфи-палка" width="384" height="486">
+                  <img class="products-slider__photo" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
                   <button class="photos__pre-btn">назад</button>
                   <button class="photos__post-btn">вперед</button>
               </div>
@@ -119,7 +119,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности"></img>
                 </div>
-                <b class="product-sections__text">Виртуальная реальность</b>
+                <h3 class="product-sections__title">Виртуальная реальность</h3>
               </a>
             </li>
             <li class="product-sections__item">
@@ -127,7 +127,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
                 </div>
-                <b class="product-sections__text">Моноподы для селфи</b>
+                <h3 class="product-sections__title">Моноподы для селфи</h3>
               </a>
             </li>
             <li class="product-sections__item">
@@ -135,7 +135,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера"></img>
                 </div>
-                <b class="product-sections__text">Экшн-камеры</b>
+                <h3 class="product-sections__title">Экшн-камеры</h3>
               </a>
             </li>
             <li class="product-sections__item">
@@ -143,7 +143,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет"></img>
                 </div>
-                <b class="product-sections__text">Фитнес-браслеты</b>
+                <h3 class="product-sections__title">Фитнес-браслеты</h3>
               </a>
             </li>
             <li class="product-sections__item">
@@ -151,7 +151,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы"></img>
                 </div>
-                <b class="product-sections__text">Умные часы</b>
+                <h3 class="product-sections__title">Умные часы</h3>
               </a>
             </li>
             <li class="product-sections__item">
@@ -159,7 +159,7 @@
                 <div class="product-sections__image-wrapper">
                   <img class="product-sections__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер"></img>
                 </div>
-                <b class="product-sections__text">Квадрокоптеры</b>
+                <h3 class="product-sections__title">Квадрокоптеры</h3>
               </a>
             </li>
           </ul>
@@ -225,7 +225,7 @@
           <p class="newsletter-subscribe__text text">Еженедельный дайджест с обзорами новинок,
               длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           <form class="newsletter-subscribe__form" action="#" method="get">
-            <input type="email" name="email" placeholder="Ваш e-mail">
+            <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail">
             <button class="newsletter-subscribe__btn">Подписаться</button>
           </form>
           <span class="newsletter-subscribe__span text">Это бесплатно</span>
@@ -248,7 +248,7 @@
         </div>
         <div class="page-footer__footer">
           <ul class="social-links">
-            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">Facecbook<span></a></li>
+            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">Facebook<span></a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank"><span class="visually-hidden">Instagram<span></a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank"><span class="visually-hidden">Twitter<span></a></li>
           </ul>
