--- a/catalog.html
+++ b/catalog.html
@@ -92,62 +92,62 @@
               </form>
             </div>
             <div class="catalog">
-              <div class="sorting">
-                <h3 class="sorting__title">Сортировка:</h3>
-                <select class="sorting__select" name="category">
-                  <option class="sorting__select-item" value="popular" selected>Популярные</option>
-                  <option class="sorting__select-item" value="new">Новые</option>
+              <header class="catalog__header">
+                <h3 class="catalog__title">Сортировка:</h3>
+                <select class="catalog__select" name="category">
+                  <option class="catalog__select-item" value="popular" selected>Популярные</option>
+                  <option class="catalog__select-item" value="new">Новые</option>
                 </select>
-                <div class="sorting__wrapper">
-                  <a class="sorting__link" href="#">
+                <div class="catalog__wrapper">
+                  <a class="catalog__sorting-link" href="#">
                     <span class="visually-hidden">Сортировать по возрастанию</span>
                   </a>
-                  <a class="sorting__link" href="#">
-                    <span class="visually-hidden">Сортировать по возрастанию</span>
+                  <a class="catalog__sorting-link" href="#">
+                    <span class="visually-hidden">Сортировать по убыванию</span>
                   </a>
                 </div>
-              </div>
+              </header>
               <div class="catalog__body">
-                <ol class="catalog__list">
+                <ul class="catalog__list">
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-1.png" alt="Любительская селфи-палка" width="360" height="380">
-                      <p class="catalog__product-name">Любительская селфи-палка</p>
-                      <b class="catalog__price">500 ₽</b>
+                      <h4 class="catalog__product-name">Любительская селфи-палка</h4>
+                      <span class="catalog__price">500 ₽</span>
                     </a>
                   </li>
                   <li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-2.png" alt="Профессиональная селфи-палка" width="360" height="380">
-                      <p class="catalog__product-name">Профессиональная селфи-палка </p>
-                      <b class="catalog__price">1 500 ₽</b>
+                      <h4 class="catalog__product-name">Профессиональная селфи-палка </h4>
+                      <span class="catalog__price">1 500 ₽</span>
                     </a>
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-3.png" alt="Непотопляемая селфи-палка" width="360" height="380">
-                      <p class="catalog__product-name">Непотопляемая селфи-палка</p>
-                      <b class="catalog__price">2 500 ₽</b>
+                      <h4 class="catalog__product-name">Непотопляемая селфи-палка</h4>
+                      <span class="catalog__price">2 500 ₽</span>
                     </a>
                   </li><li class="catalog__item">
                     <a class="catalog__link" href="#">
                       <img class="catalog__image" src="img/products/product-4.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
-                      <p class="catalog__product-name">Селфи-палка «Следуй за мной»</p>
-                      <b class="catalog__price">1 500 ₽</b>
+                      <h4 class="catalog__product-name">Селфи-палка «Следуй за мной»</h4>
+                      <span class="catalog__price">1 500 ₽</span>
                     </a>
                   </li>
-                </ol>
+                </ul>
                 <button class="catalog__button" type="button">Загрузить еще</button>
-                <div class="page-selector">
-                  <a  class="page-selector__pre-link" href="#">Назад</a>
-                  <ol class="page-selector__list">
+                <footer class="catalog__footer">
+                  <button class="catalog__pre-link" type="button">Назад</button>
+                  <ol class="page-selector">
                     <li class="page-selector__item"><a class="page-selector__link" href="#">1</a></li>
                     <li class="page-selector__item"><a class="page-selector__link" href="#">2</a></li>
                     <li class="page-selector__item"><a class="page-selector__link" href="#">3</a></li>
                     <li class="page-selector__item"><a class="page-selector__link" href="#">...</a></li>
                     <li class="page-selector__item"><a class="page-selector__link" href="#">15</a></li>
                   </ol>
-                  <a  class="page-selector__post-link" href="#">Вперёд</a>
-                </div>
+                  <button  class="catalog__post-link" type="button">Вперёд</button>
+                </footer>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
         </div>
         <div class="page-footer__footer">
           <ul class="social-links">
-            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">Facecbook<span></a></li>
+            <li class="social-links__item"><a class="social-links__link" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">Facebook<span></a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://instagram.com/" target="_blank"><span class="visually-hidden">Instagram<span></a></li>
             <li class="social-links__item"><a class="social-links__link" href="https://twitter.com/" target="_blank"><span class="visually-hidden">Twitter<span></a></li>
           </ul>
