Изменил названия классов в карточке продукта в слайдере

--- a/index.html
+++ b/index.html
@@ -41,68 +41,68 @@
           <h2 class="visually-hidden">Слайдер хитовых товаров</h2>
             <ol class="products-slider__list">
               <li class="products-slider__item products-slider__item--active">
-                <div class="products-slider__photos">
-                    <img class="products-slider__photo" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
-                    <button class="photos__pre-btn">назад</button>
-                    <button class="photos__post-btn">вперед</button>
+                <div class="products-slider__gallery">
+                    <img class="products-slider__img" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
+                    <button class="products-slider__pre-btn">назад</button>
+                    <button class="products-slider__post-btn">вперед</button>
                 </div>
                 <div class="products-slider__card">
-                  <p class="card__description">Порхает как бабочка,
+                  <p class="products-slider__description">Порхает как бабочка,
                     жалит как пчела!</p>
-                  <p class="card__text text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+                  <p class="products-slider__text text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
                   </p>
-                  <a class="card__link link" href="#">Подробнее</a>
-                  <dl class="card__characteristics">
-                    <dt class="card__characteristic-title">800м</dt>
-                    <dd class="card__characteristic-text">Дальность полета</dd>
+                  <a class="products-slider__link link" href="#">Подробнее</a>
+                  <dl class="products-slider__info">
+                    <dt class="products-slider__info-title">800м</dt>
+                    <dd class="products-slider__info-text">Дальность полета</dd>
 
-                    <dt class="card__characteristic-title">50м</dt>
-                    <dd class="card__characteristic-text">Радиус поражения</dd>
+                    <dt class="products-slider__info-title">50м</dt>
+                    <dd class="products-slider__info-text">Радиус поражения</dd>
                   </dl>
                 </div>
               </li>
               <li class="products-slider__item">
-                <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
-                  <button class="photos__pre-btn">назад</button>
-                  <button class="photos__post-btn">вперед</button>
-              </div>
-              <div class="products-slider__card">
-                <p class="card__description">Худеем
-                  правильно!</p>
-                <p class="card__text text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
-                </p>
-                <a class="card__link link" href="#">Подробнее</a>
-                <dl class="card__characteristics">
-                  <dt class="card__characteristic-title">48 часов</dt>
-                  <dd class="card__characteristic-text">Без подзарядки</dd>
-                </dl>
-              </div>
+                <div class="products-slider__gallery">
+                  <img class="products-slider__img" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
+                  <button class="products-slider__pre-btn">назад</button>
+                  <button class="products-slider__post-btn">вперед</button>
+                </div>
+                <div class="products-slider__card">
+                  <p class="products-slider__description">Худеем
+                    правильно!</p>
+                  <p class="product-slider__text text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+                  </p>
+                  <a class="products-slider__link link" href="#">Подробнее</a>
+                  <dl class="products-slider__info">
+                    <dt class="products-slider__info-title">48 часов</dt>
+                    <dd class="products-slider__info-text">Без подзарядки</dd>
+                  </dl>
+                </div>
               </li>
               <li class="products-slider__item">
-                <div class="products-slider__photos">
-                  <img class="products-slider__photo" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
-                  <button class="photos__pre-btn">назад</button>
-                  <button class="photos__post-btn">вперед</button>
-              </div>
-              <div class="products-slider__card">
-                <p class="card__description">Делай селфи,
-                  как Бен Стиллер! </p>
-                <p class="card__text text">
-                  Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
-                </p>
-                <a class="card__link link" href="#">Подробнее</a>
-                <dl class="card__characteristics">
-                  <dt class="card__characteristic-title">8,5 м</dt>
-                  <dd class="card__characteristic-text">Длина палки</dd>
+                <div class="products-slider__gallery">
+                  <img class="products-slider__img" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
+                  <button class="products-slider__pre-btn">назад</button>
+                  <button class="products-slider__post-btn">вперед</button>
+                </div>
+                <div class="products-slider__card">
+                  <p class="products-slider__description">Делай селфи,
+                    как Бен Стиллер! </p>
+                  <p class="products-slider__text text">
+                    Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+                  </p>
+                  <a class="products-slider__link link" href="#">Подробнее</a>
+                  <dl class="products-slider__info">
+                    <dt class="products-slider__info-title">8,5 м</dt>
+                    <dd class="products-slider__info-text">Длина палки</dd>
 
-                  <dt class="card__characteristic-title">5 кг</dt>
-                  <dd class="card__characteristic-text">Вес палки</dd>
+                    <dt class="products-slider__info-title">5 кг</dt>
+                    <dd class="products-slider__info-text">Вес палки</dd>
 
-                  <dt class="card__characteristic-title">Карбон</dt>
-                  <dd class="card__characteristic-text">Материал</dd>
-                </dl>
-              </div>
+                    <dt class="products-slider__info-title">Карбон</dt>
+                    <dd class="products-slider__info-text">Материал</dd>
+                  </dl>
+                </div>
               </li>
             </ol>
             <div class="products-slider__buttons">
