В блоке с разделами товаров заменил классы

--- a/catalog.html
+++ b/catalog.html
@@ -41,11 +41,13 @@
         <section class="products-catalog">
           <div class="products-catalog__header">
             <h2 class="products-catalog__title title">Моноподы для селфи</h2>
-            <ol class="products-catalog__list">
-              <li class="products-catalog__item">Главная</li>
-              <li class="products-catalog__item">Каталог товаров</li>
-              <li class="products-catalog__item">Моноподы для селфи</li>
-            </ol>
+            <nav class="products-catalog__navigation">
+              <ol class="products-catalog__list">
+                <li class="products-catalog__item">Главная</li>
+                <li class="products-catalog__item">Каталог товаров</li>
+                <li class="products-catalog__item">Моноподы для селфи</li>
+              </ol>
+            </nav>
           </div>
           <div class="products-catalog__body">
             <div class="products-filter">
