--- a/index.html
+++ b/index.html
@@ -111,55 +111,55 @@
               <button class="product-slider__button"></button>
             </div>
         </section>
-        <section class="product-sections">
+        <section class="main-goods">
           <h2  class="visually-hidden">Разделы товаров</h2>
-          <ul class="product-sections__list">
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности"></img>
+          <ul class="main-goods__list">
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="#">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/glasses.svg" width="97" height="55" alt="Очки виртуальной реальности"></img>
                 </div>
-                <h3 class="product-sections__title">Виртуальная реальность</h3>
+                <h3 class="main-goods__title">Виртуальная реальность</h3>
               </a>
             </li>
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="catalog.html">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="catalog.html">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
                 </div>
-                <h3 class="product-sections__title">Моноподы для селфи</h3>
+                <h3 class="main-goods__title">Моноподы для селфи</h3>
               </a>
             </li>
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера"></img>
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="#">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/cam.svg" width="71" height="87" alt="Экшн-камера"></img>
                 </div>
-                <h3 class="product-sections__title">Экшн-камеры</h3>
+                <h3 class="main-goods__title">Экшн-камеры</h3>
               </a>
             </li>
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет"></img>
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="#">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/bracelet.svg" width="107" height="65" alt="Фитнесс-браслет"></img>
                 </div>
-                <h3 class="product-sections__title">Фитнес-браслеты</h3>
+                <h3 class="main-goods__title">Фитнес-браслеты</h3>
               </a>
             </li>
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы"></img>
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="#">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/watch.svg" width="56" height="98" alt="Умные часы"></img>
                 </div>
-                <h3 class="product-sections__title">Умные часы</h3>
+                <h3 class="main-goods__title">Умные часы</h3>
               </a>
             </li>
-            <li class="product-sections__item">
-              <a class="product-sections__link" href="#">
-                <div class="product-sections__image-wrapper">
-                  <img class="product-sections__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер"></img>
+            <li class="main-goods__item">
+              <a class="main-goods__link" href="#">
+                <div class="main-goods__image-wrapper">
+                  <img class="main-goods__image" src="img/icons/quadcopter.svg" width="132" height="70" alt="Квадрокоптер"></img>
                 </div>
-                <h3 class="product-sections__title">Квадрокоптеры</h3>
+                <h3 class="main-goods__title">Квадрокоптеры</h3>
               </a>
             </li>
           </ul>
