--- a/index.html
+++ b/index.html
@@ -198,25 +198,25 @@
         </div>
       </div>
       <div class="additional-info">
-        <section class="additional-info__about-us">
-          <h2 class="additional-info__title title">О нас</h2>
-          <p class="additional-info__text text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-          <p class="additional-info__text text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-          <ul class="additional-info__list">
-            <li class="additional-info__item">Меловые линии</li>
-            <li class="additional-info__item">СДИК</li>
-            <li class="additional-info__item">ТоксБерри</li>
+        <section class="site-info">
+          <h2 class="site-info__title title">О нас</h2>
+          <p class="site-info__text text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="site-info__text text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="site-info__list">
+            <li class="site-info__item">Меловые линии</li>
+            <li class="site-info__item">СДИК</li>
+            <li class="site-info__item">ТоксБерри</li>
           </ul>
-          <a href="" class="additional-info__link link">Подробнее о нас</a>
+          <a href="" class="site-info__link link">Подробнее о нас</a>
         </section>
         <section class="contacts">
-          <h2 class="additional-info__title title">Контакты</h2>
-          <p class="additional-info__text text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
-          <b class="additional-info__name">Интернет-магазин «Девайс»</b>
-          <p class="additional-info__text text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <a class="tel" href="tel:+7128121212">+7 (812) 812-12-12</a></p>
-          <b class="additional-info__name">Время работы</b>
-          <p class="additional-info__text text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
-          <a href="№" class="additional-info__link link">Напишите нам</a>
+          <h2 class="contacts__title title">Контакты</h2>
+          <p class="contacts__text text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
+          <b class="contacts__name">Интернет-магазин «Девайс»</b>
+          <p class="contacts__text text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <a class="tel" href="tel:+7128121212">+7 (812) 812-12-12</a></p>
+          <b class="contacts__name">Время работы</b>
+          <p class="contacts__text text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+          <a href="№" class="contacts__link link">Напишите нам</a>
         </section>
       </div>
       <article class="newsletter-subscribe">
