Сделал контейнер для каждого крупного блока сайта

--- a/index.html
+++ b/index.html
@@ -8,35 +8,33 @@
   <body class="page__body">
     <h1 class="visually-hidden">Магазин электроники "Device"</h1>
     <header class="page-header">
-      <div class="container">
-        <div class="page-header__wrapper">
-          <a href="#">
-            <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
-          </a>
-          <div class="user-menu">
-            <form class="search-form" action="#" method="get">
-              <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
-              <button class="search-form__button" type="submit">Найти</button>
-            </form>
-            <ul class="user-menu__list user-menu__list--main">
-              <li class="user-menu__item"><a class="user-menu__link user-menu__link--not-logged-in" href="#">Войти</a></li>
-              <li class="user-menu__item"><a class="user-menu__link " href="#">Сравнить</a></li>
-              <li class="user-menu__item"><a class="user-menu__link " href="#">Корзина</a></li>
-            </ul>
-          </div>
-          <nav class="site-navigation page-header__site-navigation">
-            <a class="site-navigation__product-catalog" href="#">Каталог товаров</a>
-            <ul class="site-navigation__list page-header__list">
-              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
-              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
-              <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
-            </ul>
-          </nav>
+      <div class="page-header__container">
+        <a href="#">
+          <img class="page-header__logo" src="img/logo/header-logo.svg" alt='логотип интернет магазина "Device"' width="145" height="36">
+        </a>
+        <div class="user-menu">
+          <form class="search-form" action="#" method="get">
+            <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
+            <button class="search-form__button" type="submit">Найти</button>
+          </form>
+          <ul class="user-menu__list user-menu__list--main">
+            <li class="user-menu__item"><a class="user-menu__link user-menu__link--not-logged-in" href="#">Войти</a></li>
+            <li class="user-menu__item"><a class="user-menu__link " href="#">Сравнить</a></li>
+            <li class="user-menu__item"><a class="user-menu__link " href="#">Корзина</a></li>
+          </ul>
         </div>
+        <nav class="site-navigation page-header__site-navigation">
+          <a class="site-navigation__product-catalog" href="#">Каталог товаров</a>
+          <ul class="site-navigation__list page-header__list">
+            <li class="site-navigation__item"><a class="site-navigation__link" href="#">Доставка</a></li>
+            <li class="site-navigation__item"><a class="site-navigation__link" href="#">Гарантия</a></li>
+            <li class="site-navigation__item"><a class="site-navigation__link" href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="main-content">
-      <div class="container">
+      <div class="main-content__container">
         <section class="products-slider">
           <h2 class="visually-hidden">Слайдер хитовых товаров</h2>
             <ol class="products-slider__list">
@@ -233,7 +231,7 @@
       </article>
     </main>
     <footer class="page-footer">
-      <div class="container">
+      <div class="page-footer__container">
         <img class="page-footer__logo" src="img/logo/footer-logo.svg" alt="Логотип интернет-магазина 'Device'" width="145" height="36">
         <div class="page-footer__body">
           <p class="page-footer__adress">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
