построил сетку раздела товаров

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
       </div>
     </header>
-    <main class="main-content">
+    <main class="main-content main-content-index">
       <div class="main-content__container">
         <section class="products-slider">
           <h2 class="visually-hidden">Слайдер хитовых товаров</h2>
