--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <button class="services__button button" type="button">Кредит</button>
           </div>
           <ul class="services__list">
-            <li class="services__item">
+            <li class="services__item services__item--active">
               <h3 class="services__title title">Доставка</h3>
               <p class="services__text text">Мы с удовольствием доставим ваш товар прямо
                 к вашему подъезду совершенно бесплатно! Ведь
