сделал сетку фильтра

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </nav>
       </div>
     </header>
-    <main class="main-content main-content-index">
-      <div class="main-content__container">
+    <main class="main-content">
+      <div class="main-content__container main-content__container-index">
         <section class="products-slider">
           <h2 class="visually-hidden">Слайдер хитовых товаров</h2>
             <ol class="products-slider__list">
