сделал сетку каталога

--- a/catalog.html
+++ b/catalog.html
@@ -35,18 +35,20 @@
       </div>
     </header>
     <main class="main-content main-content-catalog">
-      <div class="main-content__container">
         <section class="products-catalog">
           <div class="products-catalog__header">
-            <h2 class="products-catalog__title title">Моноподы для селфи</h2>
-            <nav class="products-catalog__navigation">
-              <ol class="products-catalog__list">
-                <li class="products-catalog__item">Главная</li>
-                <li class="products-catalog__item">Каталог товаров</li>
-                <li class="products-catalog__item">Моноподы для селфи</li>
-              </ol>
-            </nav>
+            <div class="products-catalog__header-container">
+              <h2 class="products-catalog__title title">Моноподы для селфи</h2>
+              <nav class="products-catalog__navigation">
+                <ol class="products-catalog__list">
+                  <li class="products-catalog__item">Главная</li>
+                  <li class="products-catalog__item">Каталог товаров</li>
+                  <li class="products-catalog__item">Моноподы для селфи</li>
+                </ol>
+              </nav>
+            </div>
           </div>
+      <div class="main-content__container">
           <div class="products-catalog__body">
             <div class="products-filter">
               <h3 class="products-filter__main-title">Фильтр:</h3>
