построил мелкие сетки в хедере

--- a/catalog.html
+++ b/catalog.html
@@ -17,9 +17,11 @@
             <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
             <button class="search-form__button" type="submit">Найти</button>
           </form>
+          <ul class="site-login__list">
+            <li class="site-login__item"><a class="site-login__link" href="#">Коля Петухов</a></li>
+            <li class="site-login__item"><a class="site-login__link logout" href="#">Выйти</a></li>
+          </ul>
           <ul class="user-menu__list user-menu__list--catalog">
-            <li class="user-menu__item"><a class="user-menu__link" href="#">Илья Кузьмичёв</a></li>
-            <li class="user-menu__item"><a class="user-menu__link user-menu__link--logged-in" href="#">Выйти</a></li>
             <li class="user-menu__item"><a class="user-menu__link" href="#">Сравнить</a></li>
             <li class="user-menu__item"><a class="user-menu__link" href="#">Корзина</a></li>
           </ul>
