--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             <input class="search-form__input" type="text" name="search" placeholder="Текст поиска">
             <button class="search-form__button" type="submit">Найти</button>
           </form>
+          <ul class="site-login__list">
+            <li class="site-login__item"><a class="site-login__link" href="#">Войти</a></li>
+            <li class="site-login__item"><a class="site-login__link" href="#"></a></li>
+          </ul>
           <ul class="user-menu__list user-menu__list--main">
-            <li class="user-menu__item"><a class="user-menu__link user-menu__link--not-logged-in" href="#">Войти</a></li>
             <li class="user-menu__item"><a class="user-menu__link " href="#">Сравнить</a></li>
             <li class="user-menu__item"><a class="user-menu__link " href="#">Корзина</a></li>
           </ul>
