Сделал мелкие сетки слайдера

--- a/index.html
+++ b/index.html
@@ -54,12 +54,20 @@
                   </p>
                   <a class="products-slider__link link" href="#">Подробнее</a>
                   <dl class="products-slider__info">
-                    <dt class="products-slider__info-title">800м</dt>
-                    <dd class="products-slider__info-text">Дальность полета</dd>
-
-                    <dt class="products-slider__info-title">50м</dt>
-                    <dd class="products-slider__info-text">Радиус поражения</dd>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">800м</dt>
+                      <dd class="products-slider__info-text">Дальность полета</dd>
+                    </div>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">50м</dt>
+                      <dd class="products-slider__info-text">Радиус поражения</dd>
+                    </div>
                   </dl>
+                  <div class="products-slider__buttons quadrocopter-buttons">
+                    <button class="product-slider__button product-slider__button--active"></button>
+                    <button class="product-slider__button"></button>
+                    <button class="product-slider__button"></button>
+                  </div>
                 </div>
               </li>
               <li class="products-slider__item">
@@ -68,16 +76,23 @@
                   <button class="products-slider__pre-btn">назад</button>
                   <button class="products-slider__post-btn">вперед</button>
                 </div>
-                <div class="products-slider__card">
-                  <p class="products-slider__description">Худеем
+                <div class="products-slider__card bracelet-card">
+                  <p class="products-slider__description">Худеем <br>
                     правильно!</p>
                   <p class="product-slider__text text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
                   </p>
                   <a class="products-slider__link link" href="#">Подробнее</a>
                   <dl class="products-slider__info">
-                    <dt class="products-slider__info-title">48 часов</dt>
-                    <dd class="products-slider__info-text">Без подзарядки</dd>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">48 часов</dt>
+                      <dd class="products-slider__info-text">Без подзарядки</dd>
+                    </div>
                   </dl>
+                  <div class="products-slider__buttons bracelet-buttons">
+                    <button class="product-slider__button"></button>
+                    <button class="product-slider__button product-slider__button--active"></button>
+                    <button class="product-slider__button"></button>
+                  </div>
                 </div>
               </li>
               <li class="products-slider__item">
@@ -94,23 +109,27 @@
                   </p>
                   <a class="products-slider__link link" href="#">Подробнее</a>
                   <dl class="products-slider__info">
-                    <dt class="products-slider__info-title">8,5 м</dt>
-                    <dd class="products-slider__info-text">Длина палки</dd>
-
-                    <dt class="products-slider__info-title">5 кг</dt>
-                    <dd class="products-slider__info-text">Вес палки</dd>
-
-                    <dt class="products-slider__info-title">Карбон</dt>
-                    <dd class="products-slider__info-text">Материал</dd>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">8,5 м</dt>
+                      <dd class="products-slider__info-text">Длина палки</dd>
+                    </div>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">5 кг</dt>
+                      <dd class="products-slider__info-text">Вес палки</dd>
+                    </div>
+                    <div class="products-slider__info-wrapper">
+                      <dt class="products-slider__info-title">Карбон</dt>
+                      <dd class="products-slider__info-text">Материал</dd>
+                    </div>
                   </dl>
+                  <div class="products-slider__buttons selfie-buttons">
+                    <button class="product-slider__button"></button>
+                    <button class="product-slider__button"></button>
+                    <button class="product-slider__button product-slider__button--active"></button>
+                  </div>
                 </div>
               </li>
             </ol>
-            <div class="products-slider__buttons">
-              <button class="product-slider__button product-slider__button--active"></button>
-              <button class="product-slider__button"></button>
-              <button class="product-slider__button"></button>
-            </div>
         </section>
         <section class="main-goods">
           <h2  class="visually-hidden">Разделы товаров</h2>
