доделал кнопки-переключатели в слайдере

--- a/index.html
+++ b/index.html
@@ -63,11 +63,6 @@
                       <dd class="products-slider__info-text">Радиус поражения</dd>
                     </div>
                   </dl>
-                  <div class="products-slider__buttons quadrocopter-buttons">
-                    <button class="product-slider__button product-slider__button--active"></button>
-                    <button class="product-slider__button"></button>
-                    <button class="product-slider__button"></button>
-                  </div>
                 </div>
               </li>
               <li class="products-slider__item">
@@ -79,7 +74,7 @@
                 <div class="products-slider__card bracelet-card">
                   <p class="products-slider__description">Худеем <br>
                     правильно!</p>
-                  <p class="product-slider__text text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+                  <p class="products-slider__text text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
                   </p>
                   <a class="products-slider__link link" href="#">Подробнее</a>
                   <dl class="products-slider__info">
@@ -88,11 +83,6 @@
                       <dd class="products-slider__info-text">Без подзарядки</dd>
                     </div>
                   </dl>
-                  <div class="products-slider__buttons bracelet-buttons">
-                    <button class="product-slider__button"></button>
-                    <button class="product-slider__button product-slider__button--active"></button>
-                    <button class="product-slider__button"></button>
-                  </div>
                 </div>
               </li>
               <li class="products-slider__item">
@@ -122,14 +112,14 @@
                       <dd class="products-slider__info-text">Материал</dd>
                     </div>
                   </dl>
-                  <div class="products-slider__buttons selfie-buttons">
-                    <button class="product-slider__button"></button>
-                    <button class="product-slider__button"></button>
-                    <button class="product-slider__button product-slider__button--active"></button>
-                  </div>
                 </div>
               </li>
             </ol>
+            <div class="products-slider__buttons">
+              <button class="product-slider__button product-slider__button--active"></button>
+              <button class="product-slider__button"></button>
+              <button class="product-slider__button"></button>
+            </div>
         </section>
         <section class="main-goods">
           <h2  class="visually-hidden">Разделы товаров</h2>
