исправил марджины в хедере и в слайдере

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
               <li class="products-slider__item products-slider__item--active">
                 <div class="products-slider__gallery">
                     <img class="products-slider__img" src="img/slider/slider-1.png" alt="квадрокоптер" width="560" height="560">
-                    <button class="products-slider__pre-btn">назад</button>
-                    <button class="products-slider__post-btn">вперед</button>
+                    <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
+                    <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
                 </div>
                 <div class="products-slider__card">
                   <p class="products-slider__description">Порхает как бабочка,
@@ -68,8 +68,8 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-2.png" alt="фитнес-браслет" width="560" height="560">
-                  <button class="products-slider__pre-btn">назад</button>
-                  <button class="products-slider__post-btn">вперед</button>
+                  <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
+                  <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
                 </div>
                 <div class="products-slider__card bracelet-card">
                   <p class="products-slider__description">Худеем <br>
@@ -88,8 +88,8 @@
               <li class="products-slider__item">
                 <div class="products-slider__gallery">
                   <img class="products-slider__img" src="img/slider/slider-3.png" alt="селфи-палка" width="560" height="560">
-                  <button class="products-slider__pre-btn">назад</button>
-                  <button class="products-slider__post-btn">вперед</button>
+                  <button class="products-slider__pre-btn"><span class="visually-hidden">назад</span></button>
+                  <button class="products-slider__post-btn"><span class="visually-hidden">вперед</span></button>
                 </div>
                 <div class="products-slider__card">
                   <p class="products-slider__description">Делай селфи,
