--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </li>
             <li class="main-goods__item">
               <a class="main-goods__link" href="catalog.html">
-                <div class="main-goods__image-wrapper">
+                <div class="main-goods__image-wrapper main-goods__image-wrapper--selfie-monopodes">
                   <img class="main-goods__image" src="img/icons/monopodes.svg" width="86" height="117" alt="Монопод для селфи"></img>
                 </div>
                 <h3 class="main-goods__title">Моноподы для селфи</h3>
@@ -174,67 +174,73 @@
             </li>
           </ul>
         </section>
-        <section class="services">
-          <h2 class="visually-hidden">Услуги</h2>
-          <div class="services__slider">
-            <button class="services__button services__button--active button" type="button">Доставка</button>
-            <button class="services__button button" type="button">Гарантия</button>
-            <button class="services__button button" type="button">Кредит</button>
-          </div>
-          <ul class="services__list">
-            <li class="services__item services__item--active">
-              <h3 class="services__title title">Доставка</h3>
-              <p class="services__text text">Мы с удовольствием доставим ваш товар прямо
-                к вашему подъезду совершенно бесплатно! Ведь
-                мы неплохо заработаем, поднимая его на ваш этаж.</p>
-            </li>
-            <li class="services__item">
-              <h3 class="services__title title">Гарантия</h3>
-              <p class="services__text text">Если из-за возгорания купленного у нас товара у вас
-                сгорит дом — не переживайте, мы выдадим вам новый.
-                Товар, не дом, конечно же.</p>
-            </li>
-            <li class="services__item">
-              <h3 class="services__title title">Кредит</h3>
-              <p class="services__text text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-            </li>
-          </ul>
-        </section>
-        <div class="delivery-info">
-          <div class="delivery-info__image-wrapper">
-            <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
-          </div>
-          <b class="delivery-info__text">Доставим редкий товар под заказ</b>
-        </div>
-
-        <div class="additional-info">
-          <section class="site-info">
-            <h2 class="site-info__title title">О нас</h2>
-            <p class="site-info__text text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p class="site-info__text text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-            <ul class="site-info__list">
-              <li class="site-info__item">Меловые линии</li>
-              <li class="site-info__item">СДИК</li>
-              <li class="site-info__item">ТоксБерри</li>
-            </ul>
-            <a href="" class="site-info__link link">Подробнее о нас</a>
-          </section>
-          <section class="contacts">
-            <h2 class="contacts__title title">Контакты</h2>
-            <p class="contacts__text text">Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки. </p>
-            <b class="contacts__name">Интернет-магазин «Девайс»</b>
-            <p class="contacts__text text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <a class="tel" href="tel:+7128121212">+7 (812) 812-12-12</a></p>
-            <b class="contacts__name">Время работы</b>
-            <p class="contacts__text text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
-            <a href="№" class="contacts__link link">Напишите нам</a>
-          </section>
-        </div>
       </div>
+        <section class="services">
+          <div class="services__wrapper">
+            <h2 class="visually-hidden">Услуги</h2>
+            <div class="services__slider">
+              <button class="services__button services__button--active button" type="button">Доставка</button>
+              <button class="services__button button" type="button">Гарантия</button>
+              <button class="services__button button" type="button">Кредит</button>
+            </div>
+            <ul class="services__list">
+              <li class="services__item services__item--active">
+                <h3 class="services__title title">Доставка</h3>
+                <p class="services__text text">Мы с удовольствием доставим ваш товар прямо <br>
+                  к вашему подъезду совершенно бесплатно! Ведь
+                  мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__title title">Гарантия</h3>
+                <p class="services__text text">Если из-за возгорания купленного у нас товара у вас
+                  сгорит дом — не переживайте, мы выдадим вам новый.
+                  Товар, не дом, конечно же.</p>
+              </li>
+              <li class="services__item">
+                <h3 class="services__title title">Кредит</h3>
+                <p class="services__text text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <div class="main-content__container">
+          <div class="delivery-info">
+            <div class="delivery-info__image-wrapper">
+              <img class="delivery-info__image" src="img/icons/truck.svg" width="47px" height="31" alt="Грузовик доставляет ваш заказ"></img>
+            </div>
+            <b class="delivery-info__text">Доставим редкий товар под заказ</b>
+          </div>
+
+          <div class="additional-info">
+            <section class="site-info">
+              <h2 class="site-info__title title">О нас</h2>
+              <p class="site-info__text text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+              <p class="site-info__text text">Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+              <ul class="site-info__list">
+                <li class="site-info__item">Меловые линии</li>
+                <li class="site-info__item">СДИК</li>
+                <li class="site-info__item">ТоксБерри</li>
+              </ul>
+              <a href="" class="site-info__link link">Подробнее о нас</a>
+            </section>
+            <section class="contacts">
+              <h2 class="contacts__title title">Контакты</h2>
+              <p class="contacts__text text">Вы можете забрать товар сами, заехав в наш офис. <br> Заодно сможете проверить работоспособность покупки. </p>
+              <b class="contacts__name">Интернет-магазин «Девайс»</b>
+              <p class="contacts__text text">Санкт-Петербург, набережная реки Карповки, 5, литера П. <br> <a class="tel" href="tel:+7128121212">+7 (812) 812-12-12</a></p>
+              <b class="contacts__name">Время работы</b>
+              <p class="contacts__text text">пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00</p>
+              <a href="№" class="contacts__link link">Напишите нам</a>
+            </section>
+          </div>
+        </div>
       <article class="newsletter-subscribe">
         <div class="main-content__container">
-          <b class="newsletter-subscribe__title title">Подпишитесь на рассылку</b>
-          <p class="newsletter-subscribe__text text">Еженедельный дайджест с обзорами новинок,
-              длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+          <div class="newsletter-subscribe__wrapper">
+            <b class="newsletter-subscribe__title title">Подпишитесь на рассылку</b>
+            <p class="newsletter-subscribe__text text">Еженедельный дайджест с обзорами новинок,
+                длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+          </div>
           <form class="newsletter-subscribe__form" action="#" method="get">
             <input class="newsletter-subscribe__input" type="email" name="email" placeholder="Ваш e-mail">
             <button class="newsletter-subscribe__btn">Подписаться</button>
@@ -267,7 +273,6 @@
             <img class="page-footer__img" src="img/social-icons/html.svg" alt="Логотип компании HTML academy" width="115" height="33">
           </a>
         </div>
-      </div>
     </footer>
   </body>
 </html>
